<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dic"
        android:icon="@mipmap/tab_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_gank"
        android:icon="@mipmap/tab_gank"
        android:title="@string/title_gank" />

    <item
        android:id="@+id/navigation_todo"
        android:icon="@mipmap/tab_wx"
        android:title="@string/title_wxarticle" />

    <item
        android:id="@+id/navigation_tran"
        android:icon="@drawable/home_person_selector"
        android:title="@string/title_person" />

    <!--<item-->
        <!--android:id="@+id/navigation_person"-->
        <!--android:icon="@drawable/home_person_selector"-->
        <!--android:title="@string/title_person" />-->

</menu>
