<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal"
    android:layout_marginTop="@dimen/dp_20"
    android:paddingLeft="@dimen/dp_40"
    android:paddingRight="@dimen/dp_40"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:padding="@dimen/dp_10"
        android:background="@drawable/bg_border_theme_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@mipmap/icon_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textSize="@dimen/sp_15"
            android:layout_marginLeft="@dimen/dp_14"
            android:hint="@string/login_name"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10"
        android:background="@drawable/bg_border_theme_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@mipmap/icon_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textSize="@dimen/sp_15"
            android:layout_marginLeft="@dimen/dp_14"
            android:hint="@string/login_email"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:padding="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_14"
        android:background="@drawable/bg_border_theme_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@mipmap/icon_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textSize="@dimen/sp_15"
            android:layout_marginLeft="@dimen/dp_14"
            android:hint="@string/login_pwd"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:padding="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_14"
        android:background="@drawable/bg_border_theme_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@mipmap/icon_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textSize="@dimen/sp_15"
            android:layout_marginLeft="@dimen/dp_14"
            android:hint="@string/login_pwd_repeat"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/ll_reg_code"
            android:layout_toStartOf="@+id/iv_reg_code"
            android:orientation="horizontal"
            android:padding="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_14"
            android:background="@drawable/bg_border_theme_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@mipmap/icon_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:textSize="@dimen/sp_15"
                android:layout_marginStart="@dimen/dp_10"
                android:hint="@string/login_code"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <ImageView
            android:contentDescription="@string/login_registered"
            android:layout_alignBottom="@+id/ll_reg_code"
            android:layout_alignTop="@+id/ll_reg_code"
            android:layout_alignParentEnd="true"
            android:scaleType="fitXY"
            android:id="@+id/iv_reg_code"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <TextView
        android:gravity="center"
        android:textSize="@dimen/sp_15"
        android:paddingBottom="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dp_14"
        android:background="@drawable/bg_teal_circle"
        android:text="@string/login_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:autoLink="all"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/teal"
            android:text="@string/login_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</LinearLayout>