<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.tools.acount.AddAcountActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height">

        <ImageView
            android:id="@+id/iv_add_acount_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_16"
            android:src="@mipmap/ic_close_normal" />

        <TextView
            style="@style/normalTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/iv_add_acount_back"
            android:text="@string/account_add_title" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normal_bg" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

            <EditText
                android:id="@+id/et_add_account_name"
                style="@style/normalTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/account_add_name_hint"
                android:paddingBottom="@dimen/dp_14"
                android:paddingTop="@dimen/dp_14"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/normal_bg" />

            <EditText
                android:id="@+id/et_add_account_number"
                style="@style/normalTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/account_add_number_hint"
                android:paddingBottom="@dimen/dp_14"
                android:paddingTop="@dimen/dp_14"
                android:textSize="@dimen/sp_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/normal_bg" />

            <EditText
                android:id="@+id/et_add_account_password"
                style="@style/normalTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/account_add_password_hint"
                android:paddingBottom="@dimen/dp_14"
                android:paddingTop="@dimen/dp_14"
                android:textSize="@dimen/sp_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/normal_bg" />

            <TextView
                android:id="@+id/tv_add_account_cate"
                style="@style/normalTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableRight="@mipmap/icon_common_arrow"
                android:hint="@string/account_add_cate_hint"
                android:paddingBottom="@dimen/dp_14"
                android:paddingTop="@dimen/dp_14"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <com.github.clans.fab.FloatingActionButton
            android:layout_gravity="bottom|right"
            fab:menu_colorNormal="@color/theme_color_primary"
            fab:menu_colorPressed="@color/theme_color_primary"
            fab:menu_colorRipple="@color/theme_color_primary"
            android:id="@+id/fab_add_acount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/fab_confirm"
            style="@style/menu_labels_style"
            fab:fab_size="normal"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            fab:fab_label="@string/home_fab_up" />
    </android.support.design.widget.CoordinatorLayout>


</LinearLayout>