<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_bg"
    android:orientation="vertical"
    tools:context=".ui.tools.KuaiDiActivity">

    <include layout="@layout/layout_title_bar_back" />




        <android.support.v7.widget.CardView
            android:layout_marginTop="@dimen/title_bar_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            app:cardCornerRadius="@dimen/dp_8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp_10">

                <EditText
                    android:id="@+id/et_kuaidi_number"
                    style="@style/normalTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:drawableLeft="@mipmap/icon_kuaidi_number"
                    android:drawablePadding="@dimen/dp_10"
                    android:hint="@string/tools_kuaidi_number"
                    android:inputType="number"
                    android:padding="@dimen/dp_4" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/dp_6"
                    android:layout_marginTop="@dimen/dp_6"
                    android:background="@color/grey1" />

                <TextView
                    android:id="@+id/et_kuaidi_company"
                    style="@style/normalTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:drawableLeft="@mipmap/icon_kuaidi_company"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableRight="@mipmap/icon_common_arrow"
                    android:hint="@string/tools_kuaidi_company"
                    android:padding="@dimen/dp_4" />

            </LinearLayout>
        </android.support.v7.widget.CardView>


    <com.bilibili.magicasakura.widgets.TintButton
        android:enabled="false"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginRight="@dimen/dp_24"
        android:id="@+id/btn_kuaidi"
        style="@style/whiteTxt"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@drawable/bg_theme_circle"
        android:text="@string/tools_kuaidi_title"
        android:textStyle="bold" />


    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <TextView
        android:layout_marginBottom="@dimen/dp_10"
        android:lineSpacingExtra="2dp"
        android:textSize="@dimen/sp_12"
        android:textStyle="italic"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_24"
        android:gravity="center"
        android:hint="@string/tools_kuaidi_hint"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>